# cognitive-flow

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MEMORY_INVESTIGATION_REPORT.md  PROJECT_INVENTORY.md  README.md  cognitive_flow.py  cognitive_flow_ui.py  cognitive_flow_ui_qt.py  config.json  generate_fingerprint.py  history.json  install.bat  language_fingerprint.md  logger.py  pyproject.toml  requirements.txt  requirements_whisper_typing.txt  run-debug.bat  run.bat  run_cognitive_flow.bat  server log.txt  statistics.json
.omc/: project-memory.json
.omc/sessions/: 7ee2a912-4767-449e-bf4d-0c0d30dfa65e.json
.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json
.remember/tmp/: save-session.pid
cognitive_flow/: __init__.py  __main__.py  app.py  backends.py  logger.py  paths.py  ui.py  warmup.py
docs/: COGNITIVE_FLOW_APP_DESCRIPTION.md  overlay_ui_research_2026-03-09.md
go/: CHANGELOG.md  app.go  audio.go  config.go  deploy.sh  go.mod  hook.go  indicator.go  inject.go  main.go  remote.go  textproc.go  tray.go  win32.go
tests/: conftest.py  test_backends.py  test_config.py  test_core.py
