[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-flow"
version = "1.1.0"
description = "Local voice-to-text with GPU acceleration - free WhisperTyping alternative"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jared Williams"}
]
keywords = ["whisper", "speech-to-text", "voice", "transcription", "gpu", "cuda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "faster-whisper>=1.0.0",
    "PyAudio>=0.2.14",
    "PyQt6>=6.5.0",
    "pystray>=0.19.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
gpu = [
    "nvidia-cudnn-cu12>=9.0.0",
    "nvidia-cublas-cu12>=12.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
cognitive-flow = "cognitive_flow:main"

[project.urls]
Homepage = "https://github.com/yourusername/cognitive-flow"
Documentation = "https://github.com/yourusername/cognitive-flow#readme"
Issues = "https://github.com/yourusername/cognitive-flow/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cognitive_flow*"]

[tool.setuptools.package-data]
"*" = ["*.json"]
